/* Encoding: UTF-8 (No BOM)  Notation (in 5th position):
     * Change, ! Fix, % Optimization, + Addition, - Removal, ; Comment
   Entries may not always be in chronological/commit order.
   See license at the end of file. */

2024-10-04 09:49 UTC+0200 Aleksander Czajczynski (hb fki.pl)
  * cimgui-docking/hbimgui.cpp
  * cimgui-docking/hbimstru.ch
  * cimgui/hbimgui.cpp
  * cimgui/hbimstru.ch
    * regenerated using updated version of generator.prg

    + added getters for ImGuiStyle

  * hbdemo.hbp
    * adapt C references via *.hbc, so hopefully the demo
      can be now built against another imgui branch,
      docking for example

  * sokol/sokol_app.h
    ! win32 DispatchMessage() call changed to DispatchMessageW(),
      it fixes entering national characters to text boxes.
      But not completly, Alt+combinations still rather don't work

2023-04-18 17:44 UTC+0200 Aleksander Czajczynski (hb fki.pl)
  * cimgui-docking/hbimenum.ch
  * cimgui-docking/hbimgui.cpp
  * cimgui-docking/hbimstru.ch
  * cimgui/hbimenum.ch
  * cimgui/hbimgui.cpp
  * cimgui/hbimstru.ch
    * regenerated using updated version of generator.prg

    + after changes some functions like:
      igGetStyleColorVec4( <nStyleCol> ) ->  {,,,,}
      now returns array, instead pointer

      though for this one there is also a manual wrapper
      that works on already allocated array
      hb_igGetStyleColorVec4( <aRet>, <nStyleCol> )

    + added getters for ImGuiIO, with support for accessing elements
      in C arrays, for example:
      ImGuiIO( igGetIO() ):KeyAlt -> <lAltPressed>
      ImGuiIO( igGetIO() ):MouseClickedPos[ 1 ] -> <aLeftClickPos>
      ImGuiIO( igGetIO() ):MouseClickedPos[ 2 ] -> <aRightClickPos>

  * examples/loadfont.prg
    * added some trivial usage of ImGuiIO getters

2023-04-17 12:14 UTC+0200 Aleksander Czajczynski (hb fki.pl)
  * cimgui-common/hbimca.ch
  * cimgui-common/hbimca.prg
    * changed implementation to use wrapper to C hb_arrayGet()