@@ -3,6 +3,16 @@
    Entries may not always be in chronological/commit order.
    See license at the end of file. */
 
+2024-10-22 21:24 UTC+0200 Aleksander Czajczynski (hb fki.pl)
+  * cimgui-docking/hbimgui.cpp
+  * cimgui-docking/hbimstru.ch
+  * cimgui/hbimgui.cpp
+  * cimgui/hbimstru.ch
+    * regenerated using updated version of generator.prg
+
+    ! fixed getter for ImGuiStyle( <p> ):Colors[ n ]
+      Colors is C array... 
+
 2024-10-04 09:49 UTC+0200 Aleksander Czajczynski (hb fki.pl)
   * cimgui-docking/hbimgui.cpp
   * cimgui-docking/hbimstru.ch
